Resolves: tdf#96245 relax test for duplicate frame names

to allow duplicated unnamed frames

Change-Id: I871849b23d01209f027b6295777db705f7dc86d8